--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 Django==4.0
 django-environ==0.9.0
 django-filter==22.1
+django-leaflet==0.28.3
 djangorestframework==3.13.0
 djangorestframework-gis==1.0
 environs==9.5.0
